# bug-free-chainsaw

./: .gitignore  README.md  generate_makefiles.sh  generate_msvc15 2017.cmd
src/: CMakeLists.txt  conanfile.txt  receiver.cpp  receiver.h  utils.cmake
src/gui/: CMakeLists.txt
src/gui/resources/: resource.qrc
src/gui/src/: main.cpp
src/gui/src/button/: button.cpp  button.hpp  button_fwd.hpp
src/gui/src/fonts/: fonts.cpp  fonts.hpp
src/gui/src/main_widget/: main_widget.cpp  main_widget.hpp
src/gui/src/main_widget/control_panel/: control_panel_view.cpp  control_panel_view.hpp  control_panel_view_fwd.hpp  control_panel_widget.cpp  control_panel_widget.hpp  control_panel_widget_fwd.hpp
src/gui/src/main_widget/control_panel/relay_widget/: relay_widget.cpp  relay_widget.hpp  relay_widget_fwd.hpp
src/gui/src/main_widget/delegat/: device_list_delegat.cpp  device_list_delegat.hpp
src/gui/src/main_widget/model/: journal_model.cpp  journal_model.hpp  journal_model_fwd.hpp  model.cpp  model.hpp  model_fwd.hpp  model_list.cpp  model_list.hpp  model_list_fwd.hpp
src/gui/src/main_window/: main_window.cpp  main_window.hpp  main_window_fwd.hpp
src/lib/: CMakeLists.txt
src/lib/include/common/: common_type.hpp  context.hpp  device_id.hpp  json.hpp  local_time.hpp  relay_command.hpp  signals2.hpp
src/lib/include/current_state_model/: current_state.hpp  current_state_fwd.hpp  current_state_model.hpp  current_state_model_fwd.hpp  current_state_model_view.hpp  current_state_model_view_fwd.hpp
src/lib/include/facade/: facade.hpp  facade_fwd.hpp  facade_view.hpp
src/lib/include/journal/: journal.hpp  journal_entry.hpp  journal_entry_id.hpp  journal_fwd.hpp  journal_manager.hpp  journal_manager_fwd.hpp  journal_manager_view.hpp  journal_manager_view_fwd.hpp
src/lib/include/receiver/: receiver.h
src/lib/include/request_manager/: failed_request.hpp  request_manager_fwd.hpp  successful_request.hpp
src/lib/include/timer/: timer.hpp
src/lib/src/action_manager/: action_manager.hpp
src/lib/src/common/: common_type.cpp  local_time.cpp
src/lib/src/current_state_model/: current_state_model.cpp  current_state_model_view.cpp
src/lib/src/facade/: facade.cpp  facade_view.cpp
src/lib/src/journal/: journal.cpp  journal_entry.cpp  journal_manager.cpp  journal_manager_view.cpp
src/lib/src/power_strip_action_manager/: power_strip_action_manager.cpp  power_strip_action_manager.hpp
src/lib/src/receiver/: receiver.cpp
src/lib/src/request_manager/: request_manager.cpp  request_manager.hpp
src/lib/src/timer/: timer.cpp
src/lib/tests/: CMakeLists.txt
src/lib/tests/src/context/: context.cpp
src/lib/tests/src/current_state_model/: current_state_model.cpp
src/lib/tests/src/json/: json_test.cpp
src/model/: model.cpp  model.hpp
src/qml_gui/: CMakeLists.txt
src/qml_gui/resources/: DeviceDelegate.qml  DevicePage.qml  JournalPage.qml  main.qml  resource.qrc
src/qml_gui/src/: main.cpp
src/qml_gui/src/command_helper/: command_helper.cpp  command_helper.hpp
src/qml_gui/src/model/: device_item.cpp  device_item.hpp  device_list.cpp  model.cpp  model.hpp
src/qml_gui/src/model/journal_model/: journal_model.cpp  journal_model.hpp
